--- a/hw03.ipynb
+++ b/hw03.ipynb
@@ -3912,7 +3912,7 @@
     "sns.lineplot(count_by_date, palette = 'Reds')\n",
     "plt.xlabel('Date')\n",
     "plt.ylabel('Calls Placed')\n",
-    "plt.title('Total Calls Placed per Day from 12/31/2020 to 01/01/2021')\n",
+    "plt.title('Total Calls Placed Each Day from 12/31/2020 to 01/01/2021')\n",
     "plt.legend(['Calls Placed'])\n",
     "plt.show()\n",
     "# Code to create a lineplot above this line\n"
